--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@babel/runtime": "^7.1.5",
         "@babel/runtime-corejs2": "^7.1.5",
         "classnames": "^2.2.6",
+        "lodash": "^4.17.11",
         "prop-types": "^15.6.2",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
