--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "prop-types": "^15.6.2",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
+        "react-widget-icon": "^0.1.0",
         "shallowequal": "^1.1.0"
     },
     "devDependencies": {
