--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "scripts": {
         "docs": "node build/docs",
         "start": "transform-es src -d lib -c -w",
-        "demo": "packez examples/index.js -d docs -w -c -m css,sass,babel,jsx",
+        "demo": "node build/index",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "nobo.zhou@foxmail.com",
@@ -40,7 +40,7 @@
         "prop-types": "^15.6.2",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
-        "react-widget-icon": "^0.1.0",
+        "react-widget-icon": "^0.2.0",
         "shallowequal": "^1.1.0"
     },
     "devDependencies": {
