--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-widget-input",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "layout",
     "main": "index.js",
     "directories": {
@@ -41,7 +41,8 @@
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
         "react-widget-icon": "^0.2.0",
-        "shallowequal": "^1.1.0"
+        "shallowequal": "^1.1.0",
+        "warning": "^4.0.3"
     },
     "devDependencies": {
         "@babel/core": "^7.1.6",
